--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
+    "@angular/cli": "^6.0.0-rc.4",
     "@ionic/app-scripts": "3.2.0",
     "@ionic/lab": "1.0.9",
     "typescript": "~2.6.2"
